# osp2

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
.claude/agents/: cpp-architect.md  cpp-expert.md  cpp-reviewer.md
.claude/skills/conventional-branch/: SKILL.md
.claude/skills/conventional-commit/: SKILL.md
.claude/skills/format-and-lint/: SKILL.md
.claude/skills/make-spritesheet/: SKILL.md
.claude/skills/make-spritesheet/scripts/: make_spritesheet.py
.claude/skills/run_program_on_switch/: SKILL.md
docs/: application.md  audio.md  build-portlibs.md  filesystem.md  input.md  platform.md  playlist.md  settings.md  ui-design.md  ui.md  visualization.md
docs/todos/: TODO.md  TODO_1.md  TODO_10.md  TODO_11.md  TODO_12.md  TODO_13.md  TODO_14.md  TODO_15.md  TODO_16.md  TODO_17.md  TODO_18.md  TODO_19.md  TODO_2.md  TODO_20.md  TODO_21.md  TODO_22.md  TODO_23.md  TODO_24.md  TODO_25.md  TODO_26.md  TODO_27.md  TODO_28.md  TODO_29.md  TODO_3.md  TODO_30.md  TODO_31.md  TODO_32.md  TODO_33.md  TODO_34.md  TODO_35.md  TODO_4.md  TODO_5.md  TODO_6.md  TODO_7.md  TODO_8.md  TODO_9.md
romfs/sidlength/: README.md
scripts/: gen_cjk_subset.py  gen_sjis.py
src/: Application.cpp  Application.h  Paths.h  Platform.cpp  Platform.h  main.cpp
src/filesystem/: DataSource.h  FileEntry.h  FileSystem.cpp  FileSystem.h  FtpDataSource.cpp  FtpDataSource.h  LocalDataSource.cpp  LocalDataSource.h  NavKind.h
src/gui/: ButtonId.h  Gui.cpp  Gui.h  Theme.h  UiActions.h  UiState.h  ViewMode.h  imgui_impl_opengl3_glad.cpp
src/input/: CursorEmulator.cpp  CursorEmulator.h
src/player/: AudioTap.h  Charset.cpp  Charset.h  Metadata.h  PlayResult.h  PlaybackStatus.h  PlayerController.cpp  PlayerController.h  PlayerPlugin.h  PlayerState.h  PluginSetting.h  ShiftJisTable.inc  SongLengthDb.cpp  SongLengthDb.h
src/player/plugins/: GmePlugin.cpp  GmePlugin.h  OpenMptPlugin.cpp  OpenMptPlugin.h  PluginUtil.h  Sc68Plugin.cpp  Sc68Plugin.h  SidPlugin.cpp  SidPlugin.h  switch_compat.c
src/playlist/: PlayList.cpp  PlayList.h  PlaylistEntry.h
src/settings/: Settings.cpp  Settings.h  SettingsKeys.h
src/visualizer/: VisualFrame.h  VisualizerController.cpp  VisualizerController.h  VisualizerPlugin.h
src/visualizer/visualizers/: BarsVisualizer.cpp  BarsVisualizer.h  DebugVisualizer.cpp  DebugVisualizer.h  ShaderQuadVisualizer.cpp  ShaderQuadVisualizer.h
